Remove unnecessary commons-io/commons-lang